--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
       </div>
     </div>
   </section>
+  
+<!-- kanykey's part-->
+<!--section class="boxes">
+  <div class="box">
+      <i class="fas fa-laptop w3-large"></i>
+      <h1>Fully responsive</h1>
+      <p> This theme will look great on any device no matter the size</p>
+  </div>
+  <div class="box">
+    <i class="fas fa-tasks w3-large"></i>
+    <h1>Production Ready</h1>
+    <p> Featuring the latest build for production</p>
+</div>
+<div class="box">
+    <i class="far fa-check-circle w3-large"></i>
+    <h1>Easy to Use</h1>
+    <p> Ready to use with your own content or customize the sourse files</p>
+</div>
+</section>  
 
   <!-- Image Showcases -->
   <section class="showcase">
