--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
 </head>
- <body data-new-gr-c-s-check-loaded="14.1040.0" data-gr-ext-installed="">
+ <body>
 
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
