changed index.html in test folder

--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
       <a class="btn btn-primary" href="#">Sign In</a>
     </div>
   </nav>
-
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora iste repellat obcaecati. Dignissimos eos laudantium id, voluptates sunt beatae eaque.</p>
   <!-- Masthead -->
   <header class="masthead text-white text-center">
     <div class="overlay"></div>
