--- a/test/index.html
+++ b/test/index.html
@@ -110,35 +110,31 @@
     </div>
   </section>
 
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
-    <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"This is fantastic! Thanks so much guys!"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
-          </div>
-        </div>
-      </div>
+
+   <!-- Section container grid -->
+   <div class="container">
+    <div class="text-grid">
+        <h1>What people are saying...</h1>
     </div>
-  </section>
+    <div class="image-grid grid-1">
+        <div class="image">
+            <img class="foto" src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-1.jpg" alt="Margaret E. pucture">
+            <h3>Margaret E.</h3>
+            <p>"This is fantastic! Thanks so much guys!"</p>
+        </div>
+        <div class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-2.jpg" alt="Fred S. pucture">
+            <h3>Fred S.</h3>
+            <p>"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+        </div>
+        <div  class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-3.jpg" alt="Sarah W. pucture">
+            <h3>Sarah W.</h3>
+            <p>"Thanks so much for making these free resources available to us!"</p>
+        </div>
+    </div>
+</div>
+
 
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
