--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
  <title>Document</title>
 </head>
  <body>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, tenetur?</p>
 
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
