--- a/test/index.html
+++ b/test/index.html
@@ -82,32 +82,54 @@
   </section>
 
   <!-- Image Showcases -->
-  <section class="showcase">
+  <div class="container-1  portfolio">
+    <div class="text-grid">
+        <h1>What people are saying...</h1>
+    </div>
+    <div class="image-grid grid-1">
+        <div class="image">
+            <img class="foto" src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-1.jpg" alt="Margaret E. pucture">
+            <h3>Margaret E.</h3>
+            <p>"This is fantastic! Thanks so much guys!"</p>
+        </div>
+        <div class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-2.jpg" alt="Fred S. pucture">
+            <h3>Fred S.</h3>
+            <p>"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+        </div>
+        <div  class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-3.jpg" alt="Sarah W. pucture">
+            <h3>Sarah W.</h3>
+            <p>"Thanks so much for making these free resources available to us!"</p>
+        </div>
+    </div>
+</div>  
+  <!-- <section class="showcase">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-1.jpg);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Fully Responsive Design</h2>
           <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/bg-showcase-2.jpg');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url(https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-2.jpg);"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Updated For Bootstrap 4</h2>
           <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-3.jpg');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-3.jpg);"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Easy to Use &amp; Customize</h2>
           <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Testimonials -->
   <section class="testimonials text-center bg-light">
