--- a/index.html
+++ b/index.html
@@ -110,7 +110,31 @@
   </section>
 
   <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
+
+  <div class="container-1  portfolio">
+    <div class="text-grid">
+        <h1>What people are saying...</h1>
+    </div>
+    <div class="image-grid grid-1">
+        <div class="image">
+            <img class="foto" src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-1.jpg" alt="Margaret E. pucture">
+            <h3>Margaret E.</h3>
+            <p>"This is fantastic! Thanks so much guys!"</p>
+        </div>
+        <div class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-2.jpg" alt="Fred S. pucture">
+            <h3>Fred S.</h3>
+            <p>"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+        </div>
+        <div  class="image">
+            <img class="foto"  src="https://learn.seytech.co/assets/projects/html-css/projects/3-landing/img/testimonials-3.jpg" alt="Sarah W. pucture">
+            <h3>Sarah W.</h3>
+            <p>"Thanks so much for making these free resources available to us!"</p>
+        </div>
+    </div>
+</div>  
+
+<!--   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
@@ -137,7 +161,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Call to Action -->
   <section class="call-to-action text-white text-center">
